[package]
name = "fortify"
version = "0.1.0"
authors = ["Mårten Nilsson <nilssonmarten@live.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
frank_jwt = "3.1.2"
cookie = "0.14.2"
serde = "1.0.116"
serde_json = "1.0.57"
